# ninjarmm_screening

./: .clang-format  .gitignore  ALL 5 HAVE BEEN MADE.txt  AlexJosephReadme.md  CMakeLists.txt  Makefile  READEME.txt  README code solutions.txt  README.md  README.md.old  README.txt  README_DVG.md  ReadMe.txt  Readme.txt  Rodrigo Andrade.txt  SOLUTION.md  ninjarmm_screening.sln
step1/: .editorconfig  CMakeLists.txt  CPPQuestions.md  CPPQuestions.txt  CPPQuestions_WeiHuang.txt  Composition_Agreggation_Inheritance.cpp  Doxyfile.in  Job.hpp  L-RValues.cpp  LinuxSystemInformation.cpp  Makefile  Pilot.cpp  Pilot.hpp  Programmer.cpp  Programmer.hpp  README.md  README.txt  Requirements.txt  Step1.cpp  Step1.hpp  Step1Tests.cpp  Step_1.cpp  Tests.cpp  Utils.hpp  VIrtualDestructor.cpp  WindowSystemInformation.cpp  assignment.txt  eahomework1.cpp  header.hpp  jobs.h  main  main-tests.cpp  main.cpp  questionaire completed.docx  readme.txt  step1.cpp  step1.sln  step1.vcxproj  step1.vcxproj.filters  the_jobs.cpp  (+3 more)
step1/Answers/: Answers.docx
step1/inc/: step1.hpp
step1/include/logger/: Logger.hpp
step1/include/step1/: Job.hpp  Pilot.hpp  Programmer.hpp
step1/questions/question1/: question1.cpp  question1.vcxproj  question1.vcxproj.filters  secondmodule.cpp
step1/questions/question7/: question7.cpp  question7.vcxproj  question7.vcxproj.filters
step1/questions/question9/: question9.cpp  question9.vcxproj  question9.vcxproj.filters
step1/questions/questions/: questions.sln  questions.vcxproj
step1/sample/: main.cpp  sample.sln  sample.vcxproj  sample.vcxproj.filters
step1/src/: .gitignore  CMakeLists.txt  CPPQuestions.txt  Code.cpp  CppAnswers.txt  DemoCode.cpp  DemoCode.h  IJob.hpp  Job.cpp  Job.h  Jobs.hpp  Main.cpp  Makefile  NinjaRMMTest.cpp  NinjaRMMTest.sln  NinjaRMMTest.vcxproj  NinjaRMMTest.vcxproj.filters  Pilot.cpp  Pilot.h  Pilot.hpp  Programmer.cpp  Programmer.h  Programmer.hpp  Q1 - Answer.txt  Q10 - Answer.txt  Q11 - Answer.txt  Q12 - Answer.txt  Q13 - Answer.txt  Q14.cpp  Q15.cpp  Q16 - Answer.txt  Q17 - Answer.txt  Q18 - Answer.txt  Q19 - Answer.txt  Q2 - Answer.txt  Q20 - Answer.txt  Q21 - Answer.txt  Q22 - Answer.txt  Q3 - Answer.txt  Q4 - Answer.txt  (+81 more)
step1/src/14/: main.cpp
step1/src/15/: main.cpp
step1/test/: CMakeLists.txt  TestJobs.cpp  TestStringCount.cpp  TestTemplatedBounds.cpp  runtests.cpp  test_step1.cpp  utilsUnittests.cpp
step1/tests/: ProgrammerTest.cpp  UtilsTest.cpp  test.cpp
step2/: CMakeLists.txt  CODEREVIEW.md  CODE_REVIEW_FEEDBACK.txt  CodeReview.cpp  CodeReview.h  CodeReviewWithCommentsOnly.cpp  Code_Review.txt  ConsoleApplication1.cpp  Jobs.cpp  Makefile  Mappers.h  NinjaRequeriments.cpp  README.md  README.txt  Requirements.txt  SoftwareDataWSCQuerier.cpp  SoftwareDataWSCQuerier.h  Step2.cpp  Step2_WeiHuang.cpp  Step2_notes.txt  SystemInfo.cpp  WSCError.h  Win32APIEnumsAnsTypes.h  _Readme.txt  comments.txt  feedback.txt  getBiosInfo.cpp  getUpdates.cpp  main.cpp  ninjacodereview.cpp  read_info.cpp  read_installed.cpp  read_system_info.cpp  step2.cbp  step2.cpp  step2.depend  step2.layout  step2.sln  step2.vcxproj  step2.vcxproj.filters  (+1 more)
step2/Step2/: Step2.sln
step2/builder/: step2.pro
step2/include/: patch_info.h  system_info.h
step2/package/: CMakeLists.txt
step2/solution/: Makefile.am  configure.ac
step2/src/: CMakeLists.txt  CodeReview.cpp  CodeStep2.cpp  Feedback.txt  Job.cpp  Linux.mk  Main.cpp  Makefile  Makefile.lnx  Makefile.mac  Makefile.win  ModifiedCodeReview.cpp  ModifiedCodeReview.h  NinjaRRM_Screening_Step2.sln  NinjaRRM_Screening_Step2.vcxproj  NinjaRRM_Screening_Step2.vcxproj.filters  PetAdoptionSystem.cpp  Pilot.h  Programmer.cpp  Programmer.h  README.txt  Requirements.cpp  Result  Step2.cpp  TemplateSpecialization.h  Test.cpp  Windows.mk  av_software_data.cpp  av_software_data.h  av_software_data_querier.cpp  av_software_data_querier.h  av_software_data_querier_test.cpp  av_software_data_test.cpp  build-unix.sh  build-windows.ps1  getOsInfo.cpp  info-base.h  info-lnx.cpp  info-lnx.h  info-mac.cpp  (+19 more)
step2/step2/: Job.h  Pilot.cpp  step2.cpp  step2.vcxproj  step2.vcxproj.filters
step2/system/: CMakeLists.txt
step3/: .gitignore  Answer_A-to-G.cpp  Answer_H.cpp  Answer_I.cpp  Answer_J.cpp  CMakeLists.txt  CodeChallenge.cpp  CodeReview.cpp  CodeReview_WeiHuang.cpp  Makefile  Part3Assignment.cpp  README.md  README.txt  Requirements.txt  Step3B.cpp  UnitTest2.cpp  code-challenge.sln  code-challenge.vcxproj  code-challenge.vcxproj.filters  codeChallenge  main.cpp  step3.cpp  step3.cpp.bak  step3.sln  step3.vcxproj  step3.vcxproj.filters  test.cpp
step3/Code Reviewed/: CodeReviewed.cpp
step3/CodeReview/: CodeReview.sln
step3/inc/: CodeChallenge.hpp
step3/jobs/: config.mk  job.cpp  job.h  pilot.cpp  pilot.h  programmer.cpp  programmer.h
step3/src/: CMakeLists.txt  CodeChallenge.cpp  CodeReview.h  Linux.mk  Main.cpp  Makefile  Makefile.lnx  Makefile.win  Source.cpp  Step3.cpp  ThirdPartyAVSoftware.cpp  Windows.mk  code.cpp  code_challenge.cpp  job.cpp  job.hpp  jobsReport.cpp  main.cpp  out  step3.cpp  step3.vcxproj  step3.vcxproj.filters  unit_test_results.txt
step3/src3/: step3.cpp  step3_output_results.txt
step3/step3/: step3.sln  step3.vcxproj  step3.vcxproj.filters
step3/step3a/: CMakeLists.txt
step3/test/: test_CodeChallenge.cpp
step3/variadic/: CMakeLists.txt
step4/: CMakeLists.txt  CodeChallenge.cpp  CodeChallenge_WeiHuang.cpp  CodeReview.cpp  CodeReview.h  CodeReview.hpp  MyReview.cpp  ScopedCoInitialize.cpp  ScopedCoInitialize.hpp  ThirdPartyAVSoftware.hpp  main.cpp  step4 updated.cpp  step4.sln  step4.vcxproj  step4.vcxproj.filters
step4/CodeChallenge/: CodeChallenge.sln
step4/builder/: step4.pro
step4/src/: CodeChallenge.cpp  CodeReview.cpp  CodeReview.h  Makefile.win  NinjaRmmStep4.sln  Step4.cpp  codeReview  main.cpp  step4.cpp  step4.sln  step4.vcxproj  step4.vcxproj.filters
step5/: CMakeLists.txt  CodeChallenge.cpp  main.cpp  step5.sln  step5.vcxproj  step5.vcxproj.filters
step5/src/: CodeChallenge.cpp  Makefile  Makefile.win  solution1.cpp  solution2.cpp
(+384 files in other folders)
